roles/test-deployment-app/files/first-app/config-map/config-map-ma.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-cm
  labels:
    app: test-cm
spec:
  restartPolicy: Never
  securityContext:
    runAsUser: 1000
    runAsGroup: 2000
  containers:
    - name: test-cm
      image: busybox:latest
      resources:
        limits:
          memory: "128Mi"
          cpu: "200m"
      command: [ "bin/sh","-c" ]
      args:
        - |
          echo
          readlink -f /mnt/conf-map/file-1/file1.txt
          ls -lh /mnt/**/
          echo 
          cat /mnt/conf-map/file-1/file1.txt
          cat /mnt/conf-map/file-2/file2.txt
          echo ""
          readlink -f /etc/test/file-3/file3.txt
          ls -lh /etc/test/**/
          echo
          cat /etc/test/file-3/file3.txt
          sleep 3600
      volumeMounts:
        - mountPath: /mnt/conf-map/
          #subpath: file1.txt
          name: my-config
        - mountPath: /etc/test/
          name: file3
  volumes:
    - name: my-config
      configMap:
        name: cm-list-files
        items:
          - key: file1.txt
            path: file-1/file1.txt
          - key: file2.txt
            path: file-2/file2.txt
    - name: file3
      configMap:
        name: cm-list-files
        items:
          - key: file3.txt
            path: file-3/file3.txt
