roles/test-deployment-app/files/first-app/config-map/deploy-loadbal-conf-map.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-name
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: app-nginx
  template:
    metadata:
      labels:
        app: app-nginx
        version: v0.0.2
    spec:
      containers:
        - name: cont-app-nginx
          image: nginx:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: http
          command: ["/bin/bash", "-c"]
          args: ["$(SCRIPT)"]
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: cont-app-nginx
      # for config current time zone and time
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 0

---
kind: Service
apiVersion: v1
metadata:
  name: app-nginx-service
spec:
  #type:  LoadBalancer | ClusterIP | NodePort
  type: LoadBalancer
  selector:
    app: app-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
